# PuzzleServer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.json  credentials.json  generate_credentials.py  pre-commit-config.yaml  pyproject.toml  requirements.txt  run_server.py  run_server_debug.py  setup.py  token.json  zappa_settings.json
.github/workflows/: codeql.yml  coverage.yml  publish.yml  push_branch.yml  python-app.yml  tag_and_release.yaml
ci/: update_readme.py
flaskr/: __init__.py  auth.py  db.py  file_validation.py  puzzle_data.py  puzzle_database.sql  puzzles.py  utils.py
flaskr/cloud/: database.py  email.py  secrets.py  storage.py
flaskr/static/: sockets.js
flaskr/templates/: index.html  test_sockets.html
flaskr/uploads/puzzles/: test.json
test/: test_api.py
test/test_data/: invalid_clue_boxes.json  invalid_clue_data.json  missing_clues_1.json  missing_clues_2.json  missing_grid_size.json  test.json  valid.json
test/unit_tests/: conftest.py  test_api_auth.py  test_api_basic.py  test_api_puzzle.py  test_email.py  test_file_validation.py  test_json.py  test_meta_data_database.py  test_storage.py  test_user_databases.py
