[build-system]
requires = [
  "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["flaskr"]


[project]
name="PuzzleServer"
version="0.1.0"
license= {file = "LICENSE"}
readme = "README.md"
authors=[
    {name="Joseph Briggs", email = "jhbriggs23@gmail.com"}
    ]
maintainers=[
    {name="Joseph Briggs", email = "jhbriggs23@gmail.com"}
    ]
description="a server for hosting crossword puzzles"
dependencies= [
    "click==8.1.3",
    "Flask==2.3.2",
    "protobuf==4.23.3",
    "pyisemail==2.0.1",
    "PyJWT==2.7.0",
    "Werkzeug==2.3.4",
    "greenlet==2.0.2",
    "gunicorn==20.1.0",
    "boto3~=1.28.5",
    "botocore~=1.31.5",
    "mypy-boto3-dynamodb~=1.28.16"
]

[project.optional-dependencies]
test = [
    "pytest~=7.4.0",
    "moto~=4.1.14"
]
dev = [
    "black",
    "flake8",
    "pre-commit"
]
#jwt~=1.3.1

[tool.black]
max-line-length = 88
extend-ignore = ["E203"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
max-complexity = 10
